--- a/portapp/templates/base.html
+++ b/portapp/templates/base.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="static/styles.css">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
     <div class="container">
@@ -20,6 +21,46 @@
     </div>
 
 </nav>
+<footer>
+  <div class="footer" id="footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                  <h4> Brand Name </h4>
+              </div>
+              <div class="col-lg-3 col-sm-2 col-xs-3">
+                  <h3> Contact </h3>
+                  <ul>
+                      <li><a class="email"href="#"> insert email here </a></li>
+                      <br/>
+                      <li> <p> address line one </p> </li>
+                      <li> <p> address line two </p> </li>
+                  </ul>
+              </div>
+              <div class="col-lg-3 col-sm-2 col-xs-3">
+                  <ul>
+                      <li> <h5> <a href="#" style="margin-top: 5em"> ABOUT US</a> <h5></li>
+                      <li> <h5><a href="#"> CURRENT SERIES </a> <h5></li>
+                      <li> <h5><a href="#"> THE HOUSE </a> <h5></li>
+                      <li> <h5><a href="#"> LOOKING BACK </a> <h5></li>
+                  </ul>
+              </div>
+             
+          <!--/.row--> 
+      </div>
+      <!--/.container--> 
+  </div>
+  <!--/.footer-->
+                        
+  <div class="footer-bottom">
+      <div class="container">
+          <p class="pull-left copyright"> Copyright © Footer 2014. All right reserved. </p>
+     
+      </div>
+  </div>
+  <!--/.footer-bottom--> 
+
+</footer>
 
 <div class="container">
     {% block page_content %}{% endblock %}
